# SPR-Vision-2026

./: .gitignore  README.md  install_and_configure.sh
Main_ws/src/log/: latest_list
Main_ws/src/rm_auto_aim/armor_detector/src/: armor_detector.cpp  armor_detector_node.cpp
Main_ws/src/rm_auto_aim/armor_detector_classic/: CMakeLists.txt  package.xml
Main_ws/src/rm_auto_aim/armor_detector_classic/src/: armor_detector_node.cpp  armor_pose_estimator.cpp
Main_ws/src/rm_auto_aim/armor_detector_network/: CMakeLists.txt  package.xml
Main_ws/src/rm_auto_aim/armor_detector_network/include/openvino_armor_detector/: graph_optimizer.hpp  openvino_detect_node.hpp  openvino_detector.hpp  types.hpp
Main_ws/src/rm_auto_aim/armor_detector_network/src/: armor_pose_estimator.cpp  graph_optimizer.cpp  mono_measure_tool.cpp  openvino_detect_node.cpp
Main_ws/src/rm_auto_aim/armor_detector_test/: CMakeLists.txt
Main_ws/src/rm_auto_aim/armor_detector_test/src/: armor_detector_node.cpp
Main_ws/src/rm_auto_aim/armor_detector_test/test/: test_detector.cpp
Main_ws/src/rm_auto_aim/armor_solver/: README.md
Main_ws/src/rm_auto_aim/armor_solver/src/: armor_solver.cpp  armor_solver_node.cpp
Main_ws/src/rm_auto_aim/armor_solver_classic/: CMakeLists.txt  package.xml
Main_ws/src/rm_auto_aim/armor_solver_classic/docs/: reprojection_guide.md
Main_ws/src/rm_auto_aim/armor_solver_network/: CMakeLists.txt  package.xml
Main_ws/src/rm_auto_aim/openvino_armor_detector/: CMakeLists.txt  package.xml
Main_ws/src/rm_auto_aim/rm_auto_aim/: package.xml
Main_ws/src/rm_bringup/config/: armor_detector_classic_params.yaml  armor_detector_network_params.yaml  armor_solver_classic_params.yaml  armor_solver_network_params.yaml  camera_info.yaml  camera_infonewdame.yaml  camera_params.yaml  camera_params_hik.yaml  camera_params_mv.yaml  launch_params.yaml  rune_solver_params.yaml  serial_driver_params.yaml
Main_ws/src/rm_bringup/launch/: bringup.launch.py  bringup.launch_hiktest.py  bringup.launch_hiktest_openvino.py  bringup.launch_mvtest_nonumber.py  bringup.launch_mvtest_openvino.py
Main_ws/src/rm_hardware_driver/daheng_camera/: CMakeLists.txt  package.xml
Main_ws/src/rm_hardware_driver/rm_serial_driver/: README.md
Main_ws/src/rm_hardware_driver/ros2-mindvision-camera/: README.md
Main_ws/src/rm_robot_description/: README.md
Main_ws/src/rm_robot_description/urdf/: rm_gimbal.urdf.xacro
Utils/start/: autoaim_begin1.sh  record.sh  需要添加到Gnome开机自启动配置里面的命令
src/rm_auto_aim/armor_detector/src/: armor_detector_node.cpp  armor_pose_estimator.cpp
src/rm_auto_aim/armor_detector_test/: package.xml
src/rm_auto_aim/armor_detector_test/src/: armor_detector.cpp  armor_detector_node.cpp  armor_pose_estimator.cpp
src/rm_auto_aim/openvino_armor_detector/launch/: armor_detector.launch.py
src/rm_auto_aim/openvino_armor_detector/model/: 0708.xml
src/rm_auto_aim/openvino_armor_detector/src/: armor_pose_estimator.cpp  ba_solver.cpp  graph_optimizer.cpp  openvino_detect_node.cpp  openvino_detector.cpp
src/rm_bringup/config/: launch_params.yaml
src/rm_bringup/config/node_params/: armor_detector_params.yaml  armor_solver_params.yaml  armor_solver_params——heroold.yaml
src/rm_bringup/launch/: bringup.launch_mvtest.py
src/rm_hardware_driver/rm_camera_driver/src/: video_player.cpp
src/rm_hardware_driver/ros2-hik-camera/config/: camera_params.yaml
src/rm_hardware_driver/ros2-hik-camera/src/: hik_camera_node.cpp
src/rm_robot_description/urdf/: rm_gimbal.urdf.xacro
utils/neo/: intel-level-zero-gpu_1.3.30508.7_amd64.deb  intel-opencl-icd_24.31.30508.7_amd64.deb  libigdgmm12_22.4.1_amd64.deb
utils/rules/: camera_hik.rules
utils/start/: autoaim_begin.sh  autoaim_begin1.sh  record.sh  recordloop.sh  需要添加到Gnome开机自启动配置里面的命令
(+51 files in other folders)
